# windsock

./: .gitignore  Makefile  build.sbt  readme.md
src/main/resources/: ram.hex  winamp.32khz.pcm  winamp.raw
src/main/rust/windsock-app/: Cargo.toml  memory.x
src/main/rust/windsock-app/src/: main.rs
src/main/rust/windsock-hal/: Cargo.toml
src/main/rust/windsock-hal/src/: color.rs  gpio.rs  lib.rs  prelude.rs  serial.rs  time.rs  timer.rs
src/main/rust/windsock-pac/: Cargo.toml  build.rs  windsock.svd
src/main/rust/windsock-pac/src/: lib.rs
src/main/rust/windsock-pac/src/windsock/: metadata.rs  mod.rs
src/main/rust/windsock-pac/src/windsock/instances/: gpioa.rs  mod.rs  rgb.rs  system.rs  timer1.rs  uart1.rs
src/main/rust/windsock-pac/src/windsock/peripherals/: gpioa.rs  mod.rs  rgb.rs  system.rs  timer1.rs  uart1.rs
src/main/scala/windsock/bsp/: Blackbox.scala  ECPIX5.scala  ecpix5.lpf
src/main/scala/windsock/core/: Config.scala  Core.scala
src/main/scala/windsock/core/mmio/: RGB.scala  System.scala  Timer.scala
src/main/scala/windsock/examples/: HexCounter.scala  LedAnimation.scala  LedCore.scala  Mic.scala  MicLedAnimation.scala  Serial.scala  SoC.scala  UartPCM.scala  VGA.scala  WinAmp.scala
src/main/scala/windsock/lib/: Color.scala  FirFilter.scala  LedArray.scala  RgbLed.scala  Uart.scala  UartPump.scala  UartSink.scala
src/main/scala/windsock/lib/comps/: RgbLed.scala
src/main/scala/windsock/lib/pmod/: AudioAmp.scala  DIPSwitch.scala  DVI.scala  Mic.scala  PMOD.scala  SevenSegmentDisplay.scala  SnapOff.scala  TCS3200.scala
(+7 files in other folders)
